--- a/events/templates/events/home.html
+++ b/events/templates/events/home.html
@@ -1,6 +1,5 @@
 {% extends "events/base.html" %}
 {% load static %}
-{% load l10n %}
 {% block content %}
     <section class="events">
         <h1>Upcoming Tournaments</h1>
@@ -13,11 +12,11 @@
                     <div class="overlay-text">
                         <div class="spacer"></div>
                         <div class="banner-title">
-                            <!-- <h2>{{ event.date_time|date:"F d Y, h:m A"|localize }}</h2> -->
+                            <h2>{{ event.event_datetime|date:"F j Y, g:iA" }}</h2>
                         </div>
                         <div class="banner-secondary">
-                            <!-- <h3>{{ event.title }}</h3> -->
-                            <!-- <h3>{{ event.location }}</h3> -->
+                            <h3>{{ event.title }}</h3>
+                            <h3>{{ event.location }}</h3>
                             <a class="main-button" href="#" >Go to Page</a>
                         </div>
                     </div>
