--- a/events/static/events/css/home.css
+++ b/events/static/events/css/home.css
@@ -2,15 +2,15 @@
     height: 100vh;
 }
 
-h1 {
-    text-align: center;
-    text-transform: uppercase;
-    font-size: 5rem;
-}
-
 .banner {
     height: 50vh;
     background-color: rgba(0, 0, 0, 0.5);
+}
+
+.banner h2 {
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 5rem;
 }
 
 video {
