--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,12 +1,11 @@
 {% extends "events/base.html" %}
-{% load crispy_forms_tags %}
 {% block content %}
     <div>
         <form method="POST">
             {% csrf_token %}
             <fieldset>
                 <legend>Join Today</legend>
-                {{ form|crispy }}
+                {{ form.as_p }}
             </fieldset>
             <div>
                 <button class="btn btn-outline-info" type="submit">Sign Up</button>
