--- a/events/templates/events/base.html
+++ b/events/templates/events/base.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="{% static 'events/css/reset.css' %}">
     <link rel="stylesheet" href="{% static 'events/css/main.css' %}">
     <link rel="stylesheet" href="{% static 'events/css/home.css' %}">
+    <link rel="stylesheet" href="{% static 'events/css/register.css' %}">
     {% if title %}
         <title>Weekly Tournaments - {{ title }}</title>
     {% else %}
