--- a/events/static/events/css/main.css
+++ b/events/static/events/css/main.css
@@ -16,6 +16,10 @@ body {
     font-family: 'Montserrat', Arial, Helvetica, sans-serif;
 }
 
+main {
+    min-height: 100vh;
+}
+
 /* Nav Bar */
 
 .navbar {
@@ -41,6 +45,7 @@ body {
 }
 
 .navbar a {
+    font-size: 0.8rem;
     text-decoration: none;
     color: var(--primary);
     transition: 0.3s;
@@ -87,4 +92,25 @@ body {
 
 .alert-warning {
     background-color: var(--warning);
+}
+
+/* Default anchor styling */
+a {
+    color: lightblue;
+    font-size: 0.8rem;
+    transition: 0.3s;
+}
+
+a:visited {
+    color: lightblue;
+}
+
+a:hover {
+    color: var(--accent);
+    transition: 0.3s;
+}
+
+a:active {
+    filter: brightness(50%);
+    transition: 0.2s;
 }
