--- a/events/templates/events/base.html
+++ b/events/templates/events/base.html
@@ -16,6 +16,10 @@
     <link rel="stylesheet" href="{% static 'events/css/main.css' %}">
     <link rel="stylesheet" href="{% static 'events/css/home.css' %}">
     <link rel="stylesheet" href="{% static 'events/css/register.css' %}">
+
+    <!-- Icon -->
+    <link rel="icon" href="{% static 'events/icons/company/wt_logo_001.png' %}">
+
     {% if title %}
         <title>Weekly Tournaments - {{ title }}</title>
     {% else %}
@@ -31,8 +35,13 @@
             </ul>
             <span>Weekly Tournaments</span>
             <ul class="nav-right">
-                <li><a href="#">Login</a></li>
-                <li><a href="#">Register</a></li>
+                {% if user.is_authenticated %}
+                    <li><a href="{% url 'profile' %}">Profile</a></li>
+                    <li><a href="{% url 'logout' %}">Logout</a></li>
+                {% else %}
+                    <li><a href="{% url 'login' %}">Login</a></li>
+                    <li><a href="{% url 'register' %}">Register</a></li>
+                {% endif %}
             </ul>
         </nav>
     </header>
