--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -5,15 +5,15 @@
             <form method="POST">
                 {% csrf_token %}
                 <fieldset>
-                    <legend>Register</legend>
+                    <legend>Log In</legend>
                     {{ form.as_p }}
                 </fieldset>
                 <div class="button-container">
-                    <button class="signup-btn" type="submit">Sign Up</button>
+                    <button class="signup-btn" type="submit">Log In</button>
                 </div>
             </form>
             <div class="text-muted">
-                <small>Already Have An Account? <a href="{% url 'login' %}">Sign In</a></small>
+                <small>Need An Account? <a href="{% url 'register' %}">Sign Up Now</a></small>
             </div>
         </div>
         <div class="form-sidepanel"></div>
