--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -5,6 +5,7 @@
         <div>
             <h2>{{ user.username }}</h2>
             <p>{{ user.email }}</p>
+            <a href="{% url 'profile-update' %}">Edit Profile</a>
         </div>
     </div>
 {% endblock content %}
