--- a/events/templates/events/base.html
+++ b/events/templates/events/base.html
@@ -32,10 +32,14 @@
             <ul class="nav-left">
                 <li><a href="{% url 'events-home' %}">Home</a></li>
                 <li><a href="{% url 'events-about' %}">About</a></li>
+                <li><a href="{% url 'events-list' %}">Tournaments</a></li>
             </ul>
             <span><a href="{% url 'events-home' %}">Weekly Tournaments</a></span>
             <ul class="nav-right">
                 {% if user.is_authenticated %}
+                    {% if request.user.is_staff %}
+                        <li><a href="{% url 'event-create' %}">New Tournament</a></li>
+                    {% endif %}
                     <li><a href="{% url 'profile' %}">Profile</a></li>
                     <li><a href="{% url 'logout' %}">Logout</a></li>
                 {% else %}
