--- a/events/templates/events/event_detail.html
+++ b/events/templates/events/event_detail.html
@@ -10,16 +10,21 @@
                 <div class="overlay-text">
                     <div class="spacer"></div>
                     <div class="banner-title">
-                        <h2>{{ event.event_datetime|date:"F j Y, g:iA" }}</h2>
+                        <h2>{{ object.event_datetime|date:"F j Y, g:iA" }}</h2>
                     </div>
                     <div class="banner-secondary">
-                        <h3>{{ event.title }}</h3>
-                        <h3>{{ event.location }}</h3>
-                        <a class="main-button" href="{% url 'event-detail' event.id %}" >Go to Page</a>
+                        <h3>{{ object.title }}</h3>
+                        <h3>{{ object.location }}</h3>
+                        <a class="main-button" href="#" >Register</a>
                     </div>
                 </div>
             </div>
         </div>
+        {% if request.user.is_staff %}
+        <div class="staff-btn-container">
+            <a class="signup-btn" id="info-btn" href="{% url 'event-update' object.id %}">Update</a>
+            <a class="signup-btn" id="danger-btn" href="{% url 'event-delete' object.id %}">Delete</a>
+        </div>
+        {% endif %}
     </section>
-
 {% endblock content %}
