setup password reset email functionality and front end forms

--- a/users/templates/users/password_reset.html
+++ b/users/templates/users/password_reset.html
@@ -6,19 +6,13 @@
             <form method="POST">
                 {% csrf_token %}
                 <fieldset>
-                    <legend>Log In</legend>
+                    <legend>Reset Password</legend>
                     {{ form.as_p }}
                 </fieldset>
                 <div class="button-container">
-                    <button class="signup-btn" type="submit">Log In</button>
+                    <button class="signup-btn" type="submit">Request Reset</button>
                 </div>
             </form>
-            <div class="text-muted">
-                <small>
-                    <a href="{% url 'password_reset' %}">Forgot Password?</a>
-                </small>
-                <small>Need An Account? <a href="{% url 'register' %}">Sign Up Now</a></small>
-            </div>
         </div>
         <div class="form-sidepanel">
             <img src="{% static 'events/images/background/shooting_outside_001.jpg' %}" alt="">
