--- a/events/static/events/css/register.css
+++ b/events/static/events/css/register.css
@@ -131,9 +131,11 @@
 }
 
 .input-form .text-muted {
+    display: flex;
+    flex-direction: column;
     font-size: 0.8rem;
     text-align: center;
-    margin-top: 2rem;
+    margin-top: 2.5rem;
 }
 
 .form-sidepanel {
