setup css file and linked to edit profile page

--- a/events/templates/events/base.html
+++ b/events/templates/events/base.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="{% static 'events/css/main.css' %}">
     <link rel="stylesheet" href="{% static 'events/css/home.css' %}">
     <link rel="stylesheet" href="{% static 'events/css/register.css' %}">
+    <link rel="stylesheet" href="{% static 'events/css/profile.css' %}">
 
     <!-- Icon -->
     <link rel="icon" href="{% static 'events/icons/company/wt_logo_001.png' %}">
