--- a/events/static/events/css/main.css
+++ b/events/static/events/css/main.css
@@ -119,3 +119,46 @@ a:active {
     filter: brightness(50%);
     transition: 0.2s;
 }
+
+/* Buttons */
+
+.btn {
+    cursor: pointer;
+    margin-top: 2rem;
+    background-color: rgba(0,0,0,0);
+    border-width: 0;
+    color: var(--primary);
+    font-size: 1.25rem;
+    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+    font-weight: 200;
+    border: 1px solid var(--primary);
+    border-radius: 5px;
+    padding: 0.75rem;
+    width: 10rem;
+    transition: 0.3s;
+    text-decoration: none;
+}
+
+.btn:visited {
+    color: var(--primary);
+}
+
+.btn:hover {
+    color: black;
+    background-color: var(--primary);
+    transition: 0.3s;
+}
+
+.btn:active {
+    filter: brightness(50%);
+    transition: 0.2s;
+}
+
+.btn-info {
+    color: var(--info);
+    border-color: var(--info);
+}
+
+.btn-info:hover {
+    background-color: var(--info);
+}
