--- a/events/static/events/css/profile.css
+++ b/events/static/events/css/profile.css
@@ -1,3 +1,88 @@
-#test {
-    font-size: 10rem;
+
+.profile {
+    display: grid;
+    grid-template-areas: "header header"
+                         "events highlights";
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 20% 1fr;
+    width: 100%;
+    height: 100rem;
+}
+
+.profile-header {
+    grid-area: header;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-image: linear-gradient(var(--base-secondary), var(--base));
+    width: 100%;
+    padding: 5rem 5%;
+    border-bottom: 10px solid var(--base-secondary)
+}
+
+#profile-header-left {
+    display: flex;
+    align-items: center;
+}
+
+.profile-header .profile-image {
+    margin-right: 4rem;
+    object-fit: cover;
+    height: 12rem;
+    width: auto;
+    border-radius: 50%;
+}
+
+.profile h2, h3 {
+    font-weight: 200;
+}
+
+.profile-info-text h2, h3 {
+    display: flex;
+    justify-content: center;
+    align-items: space-between;
+    padding: 0.5rem 0;
+}
+
+.profile-info-text h2 {
+    font-size: 2.5rem;
+}
+
+.profile-info-text h3 {
+    font-size: 1.25rem;
+}
+
+.profile-events {
+    grid-area: events;
+    background-color: rgba(255, 255, 255, 0.05);
+}
+
+.profile-highlights {
+    grid-area: highlights;
+}
+
+.profile-events, .profile-highlights {
+    padding-top: 5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+}
+
+.profile-section-title {
+    font-size: 2.5rem;
+    font-weight: 200;
+    text-transform: uppercase;
+}
+
+.upcoming-events {
+    margin-top: 3rem;
+    display: flex;
+    flex-direction: column;
+    font-size: 1.5rem;
+}
+
+.profile ul {
+    font-size: 1rem;
 }
