Delete unused events forms file, add title of event to event register page

--- a/events/templates/events/event_register.html
+++ b/events/templates/events/event_register.html
@@ -6,8 +6,7 @@
             <form method="POST">
                 {% csrf_token %}
                 <fieldset>
-                    <legend>Register for tournament</legend>
-                    <!-- {{ form.as_p }} -->
+                    <legend>Register for {{ event.title }}</legend>
                 </fieldset>
                 <div class="button-container">
                     <button class="btn btn-info" type="submit">Register</button>
