--- a/events/templates/events/event_register.html
+++ b/events/templates/events/event_register.html
@@ -4,6 +4,9 @@
     <div class="form-container form-container-register">
         <div class="input-form">
             {% if registered == False %}
+                <div id="paypal-button-container"></div>
+
+                </form>
                 <form method="POST">
                     {% csrf_token %}
                     <fieldset>
@@ -22,5 +25,38 @@
             <img src="{% static 'events/images/background/dunking_outside_001.jpg' %}" alt="">
         </div>
     </div>
-    <script src="{% static 'events/javascript/eventRegisterForm.js' %}" userId = "{{ user.id }}" defer></script>
+
+    <!-- Paypal Button Scripts -->
+    <script src="https://www.paypal.com/sdk/js?client-id=AazAUJurVtkqMR7Gx1ly0bClQY_E-w4ihbYhBUF2pud-EC5Cfi3BzG8Kt65xo-aoxYfduSahaU_JFTQh&currency=USD&disable-funding=credit"></script>
+    <script>
+        // Render the PayPal button into #paypal-button-container
+        paypal.Buttons({
+
+            style: {
+                color: 'blue',
+                shape: 'rect',
+                size: 'responsive'
+            },
+
+            //setup the transaction
+            createOrder: function(data, actions) {
+                return actions.order.create({
+                    purchase_units: [{
+                        amount: {
+                            value: '25.00'
+                        }
+                    }]
+                });
+            },
+
+            //Finalize the transaction
+            onApprove: function(data, actions) {
+                return actions.order.capture().then(function(details) {
+                    //Show a success message
+                    alert(`Transaction completed by ${details.payer.name.given_name}.`)
+                });
+            }
+
+        }).render('#paypal-button-container');
+    </script>
 {% endblock content %}
