--- a/events/templates/events/base.html
+++ b/events/templates/events/base.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="{% static 'events/css/home.css' %}">
     <link rel="stylesheet" href="{% static 'events/css/register.css' %}">
     <link rel="stylesheet" href="{% static 'events/css/profile.css' %}">
+    <link rel="stylesheet" href="{% static 'events/css/event_register.css' %}">
 
     <!-- Icon -->
     <link rel="icon" href="{% static 'events/icons/company/wt_logo_001.png' %}">
