--- a/events/static/events/css/register.css
+++ b/events/static/events/css/register.css
@@ -23,6 +23,10 @@
     text-align: center;
 }
 
+.form-container-event-register {
+    height: 40rem;
+}
+
 #update-profile-container {
     height: 55rem;
     grid-template-areas: "input-form profile-sidepanel";
