--- a/events/templates/events/event_register.html
+++ b/events/templates/events/event_register.html
@@ -24,7 +24,6 @@
                 <h3>You are already registered for {{event.title}}.</h3>
                 <a class="center" href="{% url 'events-home' %}">Go to Home</a>
             {% endif %}
-            <h2>{{ transaction_id }}</h2>
         </div>
         <div class="form-sidepanel">
             <img src="{% static 'events/images/background/dunking_outside_001.jpg' %}" alt="">
@@ -33,8 +32,11 @@
 
     <script src="https://www.paypal.com/sdk/js?client-id={{ client_id }}&currency=USD&disable-funding=credit"></script>
 
-    <script>
+    <script event_price="{{ event.price }}">
         
+        const eventPrice = document.currentScript.getAttribute('event_price');
+        console.log(eventPrice);
+
         const statusIcon = document.getElementById('checkmark');
         const payButton = document.getElementsByClassName('btn-info')[0];
         const deactivatedButton = document.getElementsByClassName('btn-deactivated')[0];
@@ -54,7 +56,7 @@
                 return actions.order.create({
                     purchase_units: [{
                         amount: {
-                            value: '25.00' //update this to be taken from event object once that has been updated
+                            value: '25.00'
                         }
                     }]
                 });
