--- a/events/templates/events/base.html
+++ b/events/templates/events/base.html
@@ -34,7 +34,7 @@
         <nav class="navbar">
             <ul class="nav-left">
                 <li><a href="{% url 'events-home' %}">Home</a></li>
-                <li><a href="{% url 'events-about' %}">About</a></li>
+                <!-- <li><a href="{% url 'events-about' %}">About</a></li> -->
                 <li><a href="{% url 'events-list' %}">Tournaments</a></li>
             </ul>
             <span><a href="{% url 'events-home' %}">Weekly Tournaments</a></span>
