add more info to homepage, style homepage, add footer

--- a/events/static/events/css/home.css
+++ b/events/static/events/css/home.css
@@ -136,3 +136,13 @@ video {
     filter: brightness(50%);
     transition: 0.2s;
 }
+
+/* Text Section */
+
+#will-img {
+    width: 12rem;
+}
+
+#about-wt {
+    margin-top: 2rem;
+}
